--- a/trabalhos/Atividade - Dicionário.ipynb
+++ b/trabalhos/Atividade - Dicionário.ipynb
@@ -19,7 +19,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<font color = blue>\n",
+    "<h3> Questão 1 </h3>\n",
+    "\n",
+    "<p>\n",
+    "    Defina o que é um Dicionário.\n",
+    "</p>\n",
+    "</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Um dicionário Python é uma forma de coleção de dados \n",
+    "# em que se guarda uma chave e um valor correspondente.\n",
+    "# É semelhante ao 'Map em Java' e ao objeto{JavaScript}\n",
+    "# onde possui CHAVE : VALOR "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
